ARROW-16574: Moved AtomicReadStats inside class.  Removed comment about intermediate results.  Changed loads to use relaxed order as well.